--- a/browser-client/index.html
+++ b/browser-client/index.html
@@ -1,7 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>It's the App</title>
-    <script src="js/jquery.js"></script>
+    <meta charset="utf-8">
+    <title>XKCD Comic Viewer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <style>
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+    </style>
+    <link href="lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <script src="lib/jquery-1.7.1.js"></script>
+
+    <script src="lib/bootstrap/js/bootstrap-tooltip.js"></script>
+    <script src="lib/bootstrap/js/bootstrap-popover.js"></script>
+
     <script>
       $(function() {
         $.ajaxSetup({
@@ -12,9 +36,11 @@
                 alert('Requested page not found. [404]');
             } else if (jqXHR.status == 401) {
                 alert('Your Token is Invalid or Missing.');
-                window.location = jqXHR.getResponseHeader('authorization_uri') + encodeURIComponent(window.location.href);
+                window.location = jqXHR.getResponseHeader('authorization_uri') + encodeURIComponent(window.location.href.split('#')[0]);
+            } else if (jqXHR.status == 403) {
+                $('#comic').prepend('<div class="alert alert-danger">' + jqXHR.getResponseHeader('error_message') + '</div>');
             } else if (jqXHR.status == 500) {
-                alert('Something has gone horribly wrong. Please alerts the authorities.');
+                alert('Something has gone horribly wrong. Please alert the authorities.');
             } else if (exception === 'parsererror') {
                 alert('Requested JSON parse failed.');
             } else if (exception === 'timeout') {
@@ -37,20 +63,42 @@
                         }
                       }
         }).done( function(data) {
-          var items = [];
-          $.each(data, function(key, val) {
-            items.push('<li id="' + key + '">' + key + '-' + val + '</li>');
-          });
-          $('<ul/>', {
-            'class': 'my-new-list',
-            html: items.join('')
-          }).appendTo('body');
-          $('<img src="data:' + data.img.mime + ';base64,' + data.img.b64 + '" alt="' + data.alt + '"/>').appendTo('body')
+          $('#comicHeading').prepend('<h3>'+ data.title +'</h3>');
+          $('#comic').prepend('<img style="display: block;margin-left: auto;margin-right: auto;" src="data:' + data.img.mime + ';base64,' + data.img.b64 + '" alt="' + data.alt + '" title="' + data.alt + '"/>');
         });
       });
     </script>
+
   </head>
-  <body>
-    <h1>Here!</h1>
+
+ <body>
+
+<div class="container">
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="#"><img src="lib/uberether_solutions_logo_gray.png" alt="UberEther Logo"/></a>
+        </div>
+      </div>
+    </div>
+  <div class="hero-unit">
+
+    <div class="row" style="text-align:center;">
+        <div class="comicHeading" id="comicHeading" style="width: 100%;margin: 0 auto;">
+        </div>
+        <br/>
+        <div class="span4" id="comic" align="center" style="width: 100%;margin: 0 auto;">
+        </div>
+    </div>
+<br/>
+    <p align="center">
+       <button type="submit" class="btn btn-warning" name="approval" value="Get A New Comic" onClick="window.location.reload()">Get A New Comic</button>
+    </p>
+    <p align="center"><h6 align="center"><a href="http://xkcd.com/license.html" alt="XKCD License">XKCD Comics are licensed under the Creative Commons Attribution-NonCommercial License.</a></h6></p>
+  </div>
+</div>
+
+
   </body>
 </html>
+
